<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest02.PracticalTest02MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SERVER" />
    
   
   
        
        <EditText
            android:id="@+id/port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/port"
            android:layout_row="0"
            android:layout_column="1" />
    
    
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start" />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLIENT" />
     
      <EditText
            android:id="@+id/op1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/op1"
            android:layout_row="0"
            android:layout_column="1" />
      
      <EditText
            android:id="@+id/op2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/op2"
            android:layout_row="0"
            android:layout_column="1" />
      
	<Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add" />
	
	<Button
        android:id="@+id/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mul" />
    
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
	    <TextView
	        android:id="@+id/rez"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="false"
	        android:maxLines="10" />
    
    </ScrollView>
    
</LinearLayout>
